@@ -135,9 +135,9 @@ namespace MyMediaLite.RatingPrediction
 		}
 
 		///
-		public override void Add(int user_id, int item_id, double rating)
+		public override void AddRating(int user_id, int item_id, double rating)
 		{
-			base.Add(user_id, item_id, rating);
+			base.AddRating(user_id, item_id, rating);
 			RetrainItem(item_id);
 			RetrainUser(user_id);
 		}
